<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/game_history_txt"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="40dp" />

    <ListView
        android:id="@+id/historyListView"
        android:layout_width="match_parent"
        android:layout_height="519dp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/back_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:text="@string/back_btn" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:text="@string/home_btn" />
    </LinearLayout>

</LinearLayout>
