<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".BoardSizeActivity">

    <!-- Enter board size -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/board_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:hint="@string/hint_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/size_edt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Enter player name 1 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_player_x_name"
        app:layout_constraintEnd_toEndOf="@+id/board_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/board_size"
        app:layout_constraintTop_toBottomOf="@+id/board_size">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player_name1_edt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Enter player name 2 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_player_o_name"
        app:layout_constraintEnd_toEndOf="@+id/player_name1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/player_name1"
        app:layout_constraintTop_toBottomOf="@+id/player_name1">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player_name2_edt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Start Button -->

    <!-- Game History Button -->

    <Button
        android:id="@+id/start_button"
        style="?android:attr/buttonTintMode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/start_game_txt"
        app:layout_constraintEnd_toEndOf="@+id/player_name2"
        app:layout_constraintStart_toStartOf="@+id/player_name2"
        app:layout_constraintTop_toBottomOf="@+id/player_name2" />

    <Button
        android:id="@+id/history_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/game_history_txt"
        app:layout_constraintEnd_toEndOf="@+id/start_button"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />


</androidx.constraintlayout.widget.ConstraintLayout>